// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Header should render when not show NavContent 1`] = `
.c3 {
  color: #2c3e50;
  border: none;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c3:hover {
  color: #2c3e50;
  border: none;
}

.c5 {
  color: #ecf0f1;
  border: initial;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c5:hover {
  color: #2c3e50;
  border: none;
}

.c1 {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  display: inline-block;
  margin: 0 10px;
  cursor: pointer;
}

.c4 {
  display: inline-block;
  padding: 5px;
}

.c0 {
  position: absolute;
  z-index: 200;
  top: 0;
  left: 0;
  height: 40px;
  overflow: hidden;
  background-color: #FFA726;
  box-shadow: 0 1px 2px -1px #2c3e50;
}

.c6 {
  color: #ecf0f1;
  line-height: 40px;
  text-align: right;
  border: none;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c6::before {
  display: inline-block;
  margin-right: 10px;
  color: #ecf0f1;
  font-size: 18px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c6.is-open,
.c6.is-closed {
  display: block;
}

.c6:hover,
.c6:hover::before {
  color: #2c3e50;
}

.c7 {
  display: inline;
  padding-bottom: 5px;
}

@media screen and (max-width:800px) {
  .c2 {
    margin: 0 7px;
  }
}

@media screen and (max-width:600px) {
  .c6 {
    margin-left: 0;
  }
}

@media screen and (max-width:600px) {
  .c6::before {
    margin-right: 0;
  }
}

<NavHeader>
  <NavHeader__NavContainer
    className="first-nav"
  >
    <StyledComponent
      className="first-nav"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "NavHeader__NavContainer-sc-1bs4dz-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:absolute;z-index:200;top:0;left:0;height:",
              [Function],
              ";overflow:hidden;background-color:",
              [Function],
              ";box-shadow:",
              [Function],
              ";",
            ],
          },
          "displayName": "NavHeader__NavContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "NavHeader__NavContainer-sc-1bs4dz-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0 first-nav"
      >
        <div
          className="container"
        >
          <NavLang>
            <NavLang__NotSelectableDiv
              className="first-nav__links"
            >
              <StyledComponent
                className="first-nav__links"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "NavLang__NotSelectableDiv-sc-1rq3vcf-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;",
                      ],
                    },
                    "displayName": "NavLang__NotSelectableDiv",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "NavLang__NotSelectableDiv-sc-1rq3vcf-0",
                    "target": "nav",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <nav
                  className="c1 first-nav__links"
                >
                  <ul>
                    <NavLang__NavLinkItem>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "NavLang__NavLinkItem-sc-1rq3vcf-1",
                              "isStatic": false,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:inline-block;margin:0 10px;cursor:pointer;@media screen and (max-width:800px){margin:0 7px;}",
                              ],
                            },
                            "displayName": "NavLang__NavLinkItem",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "NavLang__NavLinkItem-sc-1rq3vcf-1",
                            "target": "li",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <li
                          className="c2"
                        >
                          <LocalizedComponent
                            lang="en"
                            selectedLang="en"
                            setSelectedLang={[Function]}
                          >
                            <NavLink
                              addTranslation={[Function]}
                              addTranslationForLanguage={[Function]}
                              ignoreTranslateChildren={false}
                              initialize={[Function]}
                              lang="en"
                              languages={Array []}
                              renderToStaticMarkup={false}
                              selectedLang="en"
                              setActiveLanguage={[Function]}
                              setSelectedLang={[Function]}
                              translate={[Function]}
                            >
                              <NavLink__Container
                                isSelected={true}
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "NavLink__Container-sc-6fie4r-0",
                                        "isStatic": false,
                                        "lastClassName": "c5",
                                        "rules": Array [
                                          "color:",
                                          [Function],
                                          ";border:",
                                          [Function],
                                          ";border-color:",
                                          [Function],
                                          ";font-family:",
                                          [Function],
                                          ";font-style:italic;line-height:",
                                          [Function],
                                          ";transition:color 0.5s;&:hover{color:",
                                          [Function],
                                          ";border:none;}",
                                        ],
                                      },
                                      "displayName": "NavLink__Container",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "NavLink__Container-sc-6fie4r-0",
                                      "target": "a",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isSelected={true}
                                  onClick={[Function]}
                                >
                                  <a
                                    className="c3"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="english"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="english"
                                      >
                                        Missing translationId: english for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </StyledComponent>
                              </NavLink__Container>
                            </NavLink>
                          </LocalizedComponent>
                          <NavLang__InlineBlock>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavLang__InlineBlock-sc-1rq3vcf-2",
                                    "isStatic": false,
                                    "lastClassName": "c4",
                                    "rules": Array [
                                      "display:inline-block;padding:5px;",
                                    ],
                                  },
                                  "displayName": "NavLang__InlineBlock",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavLang__InlineBlock-sc-1rq3vcf-2",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c4"
                              >
                                /
                              </div>
                            </StyledComponent>
                          </NavLang__InlineBlock>
                          <LocalizedComponent
                            lang="vn"
                            selectedLang="en"
                            setSelectedLang={[Function]}
                          >
                            <NavLink
                              addTranslation={[Function]}
                              addTranslationForLanguage={[Function]}
                              ignoreTranslateChildren={false}
                              initialize={[Function]}
                              lang="vn"
                              languages={Array []}
                              renderToStaticMarkup={false}
                              selectedLang="en"
                              setActiveLanguage={[Function]}
                              setSelectedLang={[Function]}
                              translate={[Function]}
                            >
                              <NavLink__Container
                                isSelected={false}
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "NavLink__Container-sc-6fie4r-0",
                                        "isStatic": false,
                                        "lastClassName": "c5",
                                        "rules": Array [
                                          "color:",
                                          [Function],
                                          ";border:",
                                          [Function],
                                          ";border-color:",
                                          [Function],
                                          ";font-family:",
                                          [Function],
                                          ";font-style:italic;line-height:",
                                          [Function],
                                          ";transition:color 0.5s;&:hover{color:",
                                          [Function],
                                          ";border:none;}",
                                        ],
                                      },
                                      "displayName": "NavLink__Container",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "NavLink__Container-sc-6fie4r-0",
                                      "target": "a",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isSelected={false}
                                  onClick={[Function]}
                                >
                                  <a
                                    className="c5"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="vietnamese"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="vietnamese"
                                      >
                                        Missing translationId: vietnamese for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </StyledComponent>
                              </NavLink__Container>
                            </NavLink>
                          </LocalizedComponent>
                        </li>
                      </StyledComponent>
                    </NavLang__NavLinkItem>
                  </ul>
                </nav>
              </StyledComponent>
            </NavLang__NotSelectableDiv>
          </NavLang>
          <NavHeader__NavControl
            className="first-nav__navcontrol"
            data-test-id="switch-nav-content"
            href="#"
            onClick={[Function]}
          >
            <StyledComponent
              className="first-nav__navcontrol"
              data-test-id="switch-nav-content"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "NavHeader__NavControl-sc-1bs4dz-1",
                    "isStatic": false,
                    "lastClassName": "c6",
                    "rules": Array [
                      "color:",
                      [Function],
                      ";line-height:",
                      [Function],
                      ";text-align:right;border:none;transition:color 0.5s;@media screen and (max-width:600px){margin-left:0;}&::before{display:inline-block;margin-right:10px;color:",
                      [Function],
                      ";font-size:",
                      [Function],
                      ";transition:color 0.5s;@media screen and (max-width:600px){margin-right:0;}}&.is-open,&.is-closed{display:block;}&:hover,&:hover::before{color:",
                      [Function],
                      ";}",
                    ],
                  },
                  "displayName": "NavHeader__NavControl",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "NavHeader__NavControl-sc-1bs4dz-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              onClick={[Function]}
            >
              <a
                className="c6 first-nav__navcontrol"
                data-test-id="switch-nav-content"
                href="#"
                onClick={[Function]}
              >
                <NavHeader__HamburgerIcon>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "NavHeader__HamburgerIcon-sc-1bs4dz-2",
                          "isStatic": false,
                          "lastClassName": "c7",
                          "rules": Array [
                            "display:inline;padding-bottom:5px;",
                          ],
                        },
                        "displayName": "NavHeader__HamburgerIcon",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "NavHeader__HamburgerIcon-sc-1bs4dz-2",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <GiHamburgerMenu
                      className="c7"
                    >
                      <IconBase
                        attr={
                          Object {
                            "viewBox": "0 0 512 512",
                          }
                        }
                        className="c7"
                      >
                        <svg
                          className="c7"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 96v64h448V96H32zm0 128v64h448v-64H32zm0 128v64h448v-64H32z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </GiHamburgerMenu>
                  </StyledComponent>
                </NavHeader__HamburgerIcon>
                 
                <Translate
                  id="Menu"
                >
                  <WrappedTranslate
                    context={
                      Object {
                        "activeLanguage": undefined,
                        "addTranslation": [Function],
                        "addTranslationForLanguage": [Function],
                        "defaultLanguage": undefined,
                        "ignoreTranslateChildren": false,
                        "initialize": [Function],
                        "languages": Array [],
                        "renderToStaticMarkup": false,
                        "setActiveLanguage": [Function],
                        "translate": [Function],
                      }
                    }
                    id="Menu"
                  >
                    Missing translationId: Menu for language: \${ languageCode }
                  </WrappedTranslate>
                </Translate>
              </a>
            </StyledComponent>
          </NavHeader__NavControl>
        </div>
      </div>
    </StyledComponent>
  </NavHeader__NavContainer>
</NavHeader>
`;

exports[`Nav Header should render when show NavContent 1`] = `
.c3 {
  color: #2c3e50;
  border: none;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c3:hover {
  color: #2c3e50;
  border: none;
}

.c5 {
  color: #ecf0f1;
  border: initial;
  border-color: #ecf0f1;
  font-family: -apple-system,blinkmacsystemfont,"Segoe UI","Roboto","Oxygen","Ubuntu","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-style: italic;
  line-height: 40px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c5:hover {
  color: #2c3e50;
  border: none;
}

.c1 {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  display: inline-block;
  margin: 0 10px;
  cursor: pointer;
}

.c4 {
  display: inline-block;
  padding: 5px;
}

.c0 {
  position: absolute;
  z-index: 200;
  top: 0;
  left: 0;
  height: 40px;
  overflow: hidden;
  background-color: #FFA726;
  box-shadow: 0 1px 2px -1px #2c3e50;
}

.c6 {
  color: #ecf0f1;
  line-height: 40px;
  text-align: right;
  border: none;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c6::before {
  display: inline-block;
  margin-right: 10px;
  color: #ecf0f1;
  font-size: 18px;
  -webkit-transition: color 0.5s;
  transition: color 0.5s;
}

.c6.is-open,
.c6.is-closed {
  display: block;
}

.c6:hover,
.c6:hover::before {
  color: #2c3e50;
}

.c7 {
  display: inline;
  font-size: 22px;
  font-weight: bolder;
  padding-bottom: 3px;
}

@media screen and (max-width:800px) {
  .c2 {
    margin: 0 7px;
  }
}

@media screen and (max-width:600px) {
  .c6 {
    margin-left: 0;
  }
}

@media screen and (max-width:600px) {
  .c6::before {
    margin-right: 0;
  }
}

<NavHeader
  isShowNavContent={true}
>
  <NavHeader__NavContainer
    className="first-nav"
  >
    <StyledComponent
      className="first-nav"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "NavHeader__NavContainer-sc-1bs4dz-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "position:absolute;z-index:200;top:0;left:0;height:",
              [Function],
              ";overflow:hidden;background-color:",
              [Function],
              ";box-shadow:",
              [Function],
              ";",
            ],
          },
          "displayName": "NavHeader__NavContainer",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "NavHeader__NavContainer-sc-1bs4dz-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="c0 first-nav"
      >
        <div
          className="container"
        >
          <NavLang>
            <NavLang__NotSelectableDiv
              className="first-nav__links"
            >
              <StyledComponent
                className="first-nav__links"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "NavLang__NotSelectableDiv-sc-1rq3vcf-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        "-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;",
                      ],
                    },
                    "displayName": "NavLang__NotSelectableDiv",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "NavLang__NotSelectableDiv-sc-1rq3vcf-0",
                    "target": "nav",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <nav
                  className="c1 first-nav__links"
                >
                  <ul>
                    <NavLang__NavLinkItem>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "NavLang__NavLinkItem-sc-1rq3vcf-1",
                              "isStatic": false,
                              "lastClassName": "c2",
                              "rules": Array [
                                "display:inline-block;margin:0 10px;cursor:pointer;@media screen and (max-width:800px){margin:0 7px;}",
                              ],
                            },
                            "displayName": "NavLang__NavLinkItem",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "NavLang__NavLinkItem-sc-1rq3vcf-1",
                            "target": "li",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <li
                          className="c2"
                        >
                          <LocalizedComponent
                            lang="en"
                            selectedLang="en"
                            setSelectedLang={[Function]}
                          >
                            <NavLink
                              addTranslation={[Function]}
                              addTranslationForLanguage={[Function]}
                              ignoreTranslateChildren={false}
                              initialize={[Function]}
                              lang="en"
                              languages={Array []}
                              renderToStaticMarkup={false}
                              selectedLang="en"
                              setActiveLanguage={[Function]}
                              setSelectedLang={[Function]}
                              translate={[Function]}
                            >
                              <NavLink__Container
                                isSelected={true}
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "NavLink__Container-sc-6fie4r-0",
                                        "isStatic": false,
                                        "lastClassName": "c5",
                                        "rules": Array [
                                          "color:",
                                          [Function],
                                          ";border:",
                                          [Function],
                                          ";border-color:",
                                          [Function],
                                          ";font-family:",
                                          [Function],
                                          ";font-style:italic;line-height:",
                                          [Function],
                                          ";transition:color 0.5s;&:hover{color:",
                                          [Function],
                                          ";border:none;}",
                                        ],
                                      },
                                      "displayName": "NavLink__Container",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "NavLink__Container-sc-6fie4r-0",
                                      "target": "a",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isSelected={true}
                                  onClick={[Function]}
                                >
                                  <a
                                    className="c3"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="english"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="english"
                                      >
                                        Missing translationId: english for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </StyledComponent>
                              </NavLink__Container>
                            </NavLink>
                          </LocalizedComponent>
                          <NavLang__InlineBlock>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "NavLang__InlineBlock-sc-1rq3vcf-2",
                                    "isStatic": false,
                                    "lastClassName": "c4",
                                    "rules": Array [
                                      "display:inline-block;padding:5px;",
                                    ],
                                  },
                                  "displayName": "NavLang__InlineBlock",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "NavLang__InlineBlock-sc-1rq3vcf-2",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c4"
                              >
                                /
                              </div>
                            </StyledComponent>
                          </NavLang__InlineBlock>
                          <LocalizedComponent
                            lang="vn"
                            selectedLang="en"
                            setSelectedLang={[Function]}
                          >
                            <NavLink
                              addTranslation={[Function]}
                              addTranslationForLanguage={[Function]}
                              ignoreTranslateChildren={false}
                              initialize={[Function]}
                              lang="vn"
                              languages={Array []}
                              renderToStaticMarkup={false}
                              selectedLang="en"
                              setActiveLanguage={[Function]}
                              setSelectedLang={[Function]}
                              translate={[Function]}
                            >
                              <NavLink__Container
                                isSelected={false}
                                onClick={[Function]}
                              >
                                <StyledComponent
                                  forwardedComponent={
                                    Object {
                                      "$$typeof": Symbol(react.forward_ref),
                                      "attrs": Array [],
                                      "componentStyle": ComponentStyle {
                                        "componentId": "NavLink__Container-sc-6fie4r-0",
                                        "isStatic": false,
                                        "lastClassName": "c5",
                                        "rules": Array [
                                          "color:",
                                          [Function],
                                          ";border:",
                                          [Function],
                                          ";border-color:",
                                          [Function],
                                          ";font-family:",
                                          [Function],
                                          ";font-style:italic;line-height:",
                                          [Function],
                                          ";transition:color 0.5s;&:hover{color:",
                                          [Function],
                                          ";border:none;}",
                                        ],
                                      },
                                      "displayName": "NavLink__Container",
                                      "foldedComponentIds": Array [],
                                      "render": [Function],
                                      "styledComponentId": "NavLink__Container-sc-6fie4r-0",
                                      "target": "a",
                                      "toString": [Function],
                                      "warnTooManyClasses": [Function],
                                      "withComponent": [Function],
                                    }
                                  }
                                  forwardedRef={null}
                                  isSelected={false}
                                  onClick={[Function]}
                                >
                                  <a
                                    className="c5"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="vietnamese"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="vietnamese"
                                      >
                                        Missing translationId: vietnamese for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </StyledComponent>
                              </NavLink__Container>
                            </NavLink>
                          </LocalizedComponent>
                        </li>
                      </StyledComponent>
                    </NavLang__NavLinkItem>
                  </ul>
                </nav>
              </StyledComponent>
            </NavLang__NotSelectableDiv>
          </NavLang>
          <NavHeader__NavControl
            className="first-nav__navcontrol"
            data-test-id="switch-nav-content"
            href="#"
            onClick={[Function]}
          >
            <StyledComponent
              className="first-nav__navcontrol"
              data-test-id="switch-nav-content"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "NavHeader__NavControl-sc-1bs4dz-1",
                    "isStatic": false,
                    "lastClassName": "c6",
                    "rules": Array [
                      "color:",
                      [Function],
                      ";line-height:",
                      [Function],
                      ";text-align:right;border:none;transition:color 0.5s;@media screen and (max-width:600px){margin-left:0;}&::before{display:inline-block;margin-right:10px;color:",
                      [Function],
                      ";font-size:",
                      [Function],
                      ";transition:color 0.5s;@media screen and (max-width:600px){margin-right:0;}}&.is-open,&.is-closed{display:block;}&:hover,&:hover::before{color:",
                      [Function],
                      ";}",
                    ],
                  },
                  "displayName": "NavHeader__NavControl",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "NavHeader__NavControl-sc-1bs4dz-1",
                  "target": "a",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              href="#"
              onClick={[Function]}
            >
              <a
                className="c6 first-nav__navcontrol"
                data-test-id="switch-nav-content"
                href="#"
                onClick={[Function]}
              >
                <NavHeader__CloseIcon>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "NavHeader__CloseIcon-sc-1bs4dz-3",
                          "isStatic": false,
                          "lastClassName": "c7",
                          "rules": Array [
                            "display:inline;font-size:",
                            [Function],
                            ";font-weight:bolder;padding-bottom:3px;",
                          ],
                        },
                        "displayName": "NavHeader__CloseIcon",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "NavHeader__CloseIcon-sc-1bs4dz-3",
                        "target": [Function],
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <MdClose
                      className="c7"
                    >
                      <IconBase
                        attr={
                          Object {
                            "viewBox": "0 0 24 24",
                          }
                        }
                        className="c7"
                      >
                        <svg
                          className="c7"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                            key="0"
                          />
                        </svg>
                      </IconBase>
                    </MdClose>
                  </StyledComponent>
                </NavHeader__CloseIcon>
                 
                <Translate
                  id="Menu"
                >
                  <WrappedTranslate
                    context={
                      Object {
                        "activeLanguage": undefined,
                        "addTranslation": [Function],
                        "addTranslationForLanguage": [Function],
                        "defaultLanguage": undefined,
                        "ignoreTranslateChildren": false,
                        "initialize": [Function],
                        "languages": Array [],
                        "renderToStaticMarkup": false,
                        "setActiveLanguage": [Function],
                        "translate": [Function],
                      }
                    }
                    id="Menu"
                  >
                    Missing translationId: Menu for language: \${ languageCode }
                  </WrappedTranslate>
                </Translate>
              </a>
            </StyledComponent>
          </NavHeader__NavControl>
        </div>
      </div>
    </StyledComponent>
  </NavHeader__NavContainer>
</NavHeader>
`;

exports[`Nav Header should switchNav from Off to On 1`] = `
<NavHeader__NavContainer
  className="first-nav"
>
  <div
    className="container"
  >
    <NavLang />
    <NavHeader__NavControl
      className="first-nav__navcontrol"
      data-test-id="switch-nav-content"
      href="#"
      onClick={[Function]}
    >
      <NavHeader__HamburgerIcon />
       
      <Translate
        id="Menu"
      />
    </NavHeader__NavControl>
  </div>
</NavHeader__NavContainer>
`;

exports[`Nav Header should switchNav from On to Off 1`] = `
<NavHeader__NavContainer
  className="first-nav"
>
  <div
    className="container"
  >
    <NavLang />
    <NavHeader__NavControl
      className="first-nav__navcontrol"
      data-test-id="switch-nav-content"
      href="#"
      onClick={[Function]}
    >
      <NavHeader__CloseIcon />
       
      <Translate
        id="Menu"
      />
    </NavHeader__NavControl>
  </div>
</NavHeader__NavContainer>
`;
